--- a/private.html
+++ b/private.html
@@ -1174,6 +1174,36 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   </ul>
 </li>
 <li>
+  <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#red"
+    title="red* = &quot;red&quot;"><wbr />red</a></li>
+  <li><a class="reference" href="#green"
+    title="green* = &quot;green&quot;"><wbr />green</a></li>
+  <li><a class="reference" href="#cyan"
+    title="cyan* = &quot;cyan&quot;"><wbr />cyan</a></li>
+  <li><a class="reference" href="#yellow"
+    title="yellow* = &quot;yellow&quot;"><wbr />yellow</a></li>
+  <li><a class="reference" href="#white"
+    title="white* = &quot;white&quot;"><wbr />white</a></li>
+  <li><a class="reference" href="#black"
+    title="black* = &quot;black&quot;"><wbr />black</a></li>
+  <li><a class="reference" href="#brightred"
+    title="brightred* = &quot;brightred&quot;"><wbr />brightred</a></li>
+  <li><a class="reference" href="#brightgreen"
+    title="brightgreen* = &quot;brightgreen&quot;"><wbr />brightgreen</a></li>
+  <li><a class="reference" href="#brightcyan"
+    title="brightcyan* = &quot;brightcyan&quot;"><wbr />brightcyan</a></li>
+  <li><a class="reference" href="#brightyellow"
+    title="brightyellow* = &quot;brightyellow&quot;"><wbr />brightyellow</a></li>
+  <li><a class="reference" href="#brightwhite"
+    title="brightwhite* = &quot;brightwhite&quot;"><wbr />brightwhite</a></li>
+  <li><a class="reference" href="#clrainbow"
+    title="clrainbow* = &quot;rainbow&quot;"><wbr />clrainbow</a></li>
+
+  </ul>
+</li>
+<li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#getTerminalWidth,"
@@ -1287,9 +1317,9 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   </div>
   <div class="nine columns" id="content">
   <p class="module-desc"><blockquote><p><p>Library     : private.nim</p>
-<p>Status      : in use</p>
+<p>Status      : stable</p>
 <p>License     : MIT opensource</p>
-<p>Version     : 0.6</p>
+<p>Version     : 0.6.5</p>
 <p>ProjectStart: 2015-06-20</p>
 <p>Compiler    : Nim 0.11.3</p>
 <p>Description : library with a collection of procs and templates</p>
@@ -1326,6 +1356,71 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <h1><a class="toc-backref" href="#9">Lets</a></h1>
 <dl class="item">
 <dt id="start"><a name="start"></a><pre><span class="Identifier">start</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Identifier">epochTime</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+</dd>
+
+</dl></div>
+<div class="section" id="10">
+<h1><a class="toc-backref" href="#10">Consts</a></h1>
+<dl class="item">
+<dt id="red"><a name="red"></a><pre><span class="Identifier">red</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;red&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="green"><a name="green"></a><pre><span class="Identifier">green</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;green&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="cyan"><a name="cyan"></a><pre><span class="Identifier">cyan</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;cyan&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="yellow"><a name="yellow"></a><pre><span class="Identifier">yellow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;yellow&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="white"><a name="white"></a><pre><span class="Identifier">white</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;white&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="black"><a name="black"></a><pre><span class="Identifier">black</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;black&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightred"><a name="brightred"></a><pre><span class="Identifier">brightred</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightred&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightgreen"><a name="brightgreen"></a><pre><span class="Identifier">brightgreen</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightgreen&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightcyan"><a name="brightcyan"></a><pre><span class="Identifier">brightcyan</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightcyan&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightyellow"><a name="brightyellow"></a><pre><span class="Identifier">brightyellow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightyellow&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightwhite"><a name="brightwhite"></a><pre><span class="Identifier">brightwhite</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightwhite&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="clrainbow"><a name="clrainbow"></a><pre><span class="Identifier">clrainbow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;rainbow&quot;</span></pre></dt>
 <dd>
 
 
@@ -1383,8 +1478,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>dhlecho</p>
 <p>echo a line and highlight all appearances of a char or string</p>
 <p>with a certain color</p>
-<pre><span class="Identifier">dhlecho</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;g&quot;</span><span class="Punctuation">)</span></pre><p>this would highlight all T in green</p>
-<p>available colors : g,y,c,r,w</p>
+<pre><span class="Identifier">dhlecho</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre><p>this would highlight all T in green</p>
+<p>available colors : green,yellow,cyan,red,white</p>
 
 
 </dd>
@@ -1486,7 +1581,7 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 <p>handler</p>
 <p>this runs if ctrl-c is pressed</p>
 <p>and provides some feedback upon exit</p>
-<p>just by this library into your project you will have an automatic</p>
+<p>just by using this library your project will have an automatic</p>
 <p>exit handler via ctrl-c</p>
 
 
@@ -1507,11 +1602,11 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 <p>suitable for one line headers , overlong lines will</p>
 <p>be cut to terminal window size with out ceremony</p>
 <p>the color of the string can be selected available colors</p>
-<p>g,r,c,w,y and for going completely bonkers the frame</p>
-<p>can be set to rainbow too .</p>
+<p>green,red,cyan,white,yellow and for going completely bonkers the frame</p>
+<p>can be set to clrainbow too .</p>
 <pre><span class="Keyword">import</span> <span class="Identifier">private</span><span class="Punctuation">,</span><span class="Identifier">terminal</span>
 
-<span class="Identifier">superheader</span><span class="Punctuation">(</span><span class="StringLit">&quot;Ok That's it for Now !&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;rainbow&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;w&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">superheader</span><span class="Punctuation">(</span><span class="StringLit">&quot;Ok That's it for Now !&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="Identifier">white</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
@@ -1525,9 +1620,9 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 <span class="Identifier">erasescreen</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Identifier">cursorup</span><span class="Punctuation">(</span><span class="DecNumber">80</span><span class="Punctuation">)</span>
 <span class="Keyword">let</span> <span class="Identifier">bb</span> <span class="Operator">=</span> <span class="StringLit">&quot;NIM the system language for the future, which extends to as far as you need and still is small !!&quot;</span>
-<span class="Identifier">superHeaderA</span><span class="Punctuation">(</span><span class="Identifier">bb</span><span class="Punctuation">,</span><span class="StringLit">&quot;rainbow&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;y&quot;</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">)</span>
+<span class="Identifier">superHeaderA</span><span class="Punctuation">(</span><span class="Identifier">bb</span><span class="Punctuation">,</span><span class="Punctuation">,</span><span class="StringLit">&quot;y&quot;</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">)</span>
 <span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">3</span><span class="Punctuation">)</span>
-<span class="Identifier">superheader</span><span class="Punctuation">(</span><span class="StringLit">&quot;Ok That's it for Now !&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;rainbow&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;b&quot;</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">superheader</span><span class="Punctuation">(</span><span class="StringLit">&quot;Ok That's it for Now !&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="StringLit">&quot;b&quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="getRandomInt"><a name="getRandomInt,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomInt</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">mi</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1000000000</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
@@ -1704,7 +1799,7 @@ msgX templates convenience templates for colored text output the assumption is t
               <span class="Keyword">if</span> <span class="Identifier">al</span><span class="Operator">.</span><span class="Identifier">contains</span><span class="Punctuation">(</span><span class="Identifier">sw</span><span class="Punctuation">)</span> <span class="Operator">==</span> <span class="Identifier">true</span><span class="Punctuation">:</span>
                  <span class="Identifier">inc</span> <span class="Identifier">oc</span>
                  <span class="Identifier">msgy</span><span class="Punctuation">(</span><span class="Punctuation">)</span> <span class="Keyword">do</span><span class="Punctuation">:</span> <span class="Identifier">write</span><span class="Punctuation">(</span><span class="Identifier">stdout</span><span class="Punctuation">,</span><span class="StringLit">&quot;{:&lt;8}{:&gt;6} {:&lt;7}{:&gt;6}  &quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Line :&quot;</span><span class="Punctuation">,</span><span class="Identifier">lc</span><span class="Punctuation">,</span><span class="StringLit">&quot;Count :&quot;</span><span class="Punctuation">,</span><span class="Identifier">oc</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
-                 <span class="Identifier">dhlecho</span><span class="Punctuation">(</span><span class="Identifier">al</span><span class="Punctuation">,</span><span class="Identifier">sw</span><span class="Punctuation">,</span><span class="StringLit">&quot;g&quot;</span><span class="Punctuation">)</span>
+                 <span class="Identifier">dhlecho</span><span class="Punctuation">(</span><span class="Identifier">al</span><span class="Punctuation">,</span><span class="Identifier">sw</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span>
                  <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
            <span class="Keyword">except</span><span class="Punctuation">:</span>
               <span class="Keyword">break</span>
@@ -1724,7 +1819,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-06 08:43:23 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-06 11:12:19 UTC</small>
       </div>
     </div>
   </div>
