--- a/libFinHk.html
+++ b/libFinHk.html
@@ -1189,7 +1189,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <p class="module-desc"><blockquote><p><p>Program     : libFinHk</p>
 <p>Status      : Development</p>
 <p>License     : MIT opensource</p>
-<p>Version     : 0.0.1</p>
+<p>Version     : 0.0.x</p>
 <p>Compiler    : nim 0.11.3</p>
 <p>Description : A library to support financial calculations with Nim</p>
 <blockquote><p>with focus on Hongkong Stock Exchange data</p></blockquote>
@@ -1244,9 +1244,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>the stock codes can be massaged into yahoo codes for further</p>
 <p>current or historical data downloads</p>
 <p>this routine was successfully tested in 2015-07</p>
-<p>it may take a few seconds as abt 1500 stocks are currently listed</p>
-<p>a facility to store this data locally will be added shortly</p>
-<p>ideally a database , but csv file may also be ok </p>
+<p>it may take a few seconds as abt 1500 stocks are currently listed </p>
 
 
 </dd>
@@ -1296,7 +1294,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-09 19:50:40 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-09 20:00:29 UTC</small>
       </div>
     </div>
   </div>
