--- a/libFinHk.html
+++ b/libFinHk.html
@@ -1168,6 +1168,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#hkexToYhoo,string"
     title="hkexToYhoo*(stc: string): string"><wbr />hkex<wbr />To<wbr />Yhoo</a></li>
+  <li><a class="reference" href="#yhooToHKEX,string"
+    title="yhooToHKEX*(stc: string): string"><wbr />yhoo<wbr />To<wbr />HKEX</a></li>
   <li><a class="reference" href="#getHKEXcodes,"
     title="getHKEXcodes*(): seq[seq[string]]"><wbr />get<wbr />HKEXcodes</a></li>
   <li><a class="reference" href="#getHKEXcodesFromFile,string"
@@ -1176,8 +1178,10 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="initHKEX*(): seq[seq[string]]"><wbr />init<wbr />HKEX</a></li>
   <li><a class="reference" href="#getHKEXseq,seq[string],string"
     title="getHKEXseq*(stockslist: seq[string]; acode: string): int"><wbr />get<wbr />HKEXseq</a></li>
-  <li><a class="reference" href="#showQuoteTableHk,Nf,seq[int]"
-    title="showQuoteTableHk*(apfData: Nf; stockseq: seq[int])"><wbr />show<wbr />Quote<wbr />Table<wbr />Hk</a></li>
+  <li><a class="reference" href="#hkPfseq,Nf,"
+    title="hkPfseq*(anf: Nf; hkexcodes): seq[int]"><wbr />hk<wbr />Pfseq</a></li>
+  <li><a class="reference" href="#showQuoteTableHk,Nf"
+    title="showQuoteTableHk*(apfData: Nf)"><wbr />show<wbr />Quote<wbr />Table<wbr />Hk</a></li>
   <li><a class="reference" href="#hkRandomPortfolio,int,string,string"
     title="hkRandomPortfolio*(sz: int = 10; startdate: string = &quot;2014-01-01&quot;; 
                    enddate: string = getDateStr()): (Nf, seq[int])"><wbr />hk<wbr />Random<wbr />Portfolio</a></li>
@@ -1205,7 +1209,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>Requires    : nimFinLib</p>
 <p>Notes       : it is assumed that terminal color is black background</p>
 <blockquote><p><p>and white text. Other color schemes may not show all output.</p>
-<p>For comprehensive tests and usage see nimFinT3.nim</p>
+<p>For comprehensive tests and usage see nimFinT3.nim &amp; nimFinT4</p>
 </p></blockquote>
 </p></blockquote>
 </p>
@@ -1234,6 +1238,14 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>converts a hkex stockcode like 00001 to 0001.HK only longer ones</p>
 <p>not starting with 0 need not be cut</p>
 <p>current yahoo historical data links for csv download need this format</p>
+
+
+</dd>
+<dt id="yhooToHKEX"><a name="yhooToHKEX,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">yhooToHKEX</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">stc</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>yhooToHKEX</p>
+<p>convert a yahoo code of type 0001.HK into a HKEX code</p>
+<p>of type 00001 </p>
 
 
 </dd>
@@ -1279,7 +1291,14 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 
 
 </dd>
-<dt id="showQuoteTableHk"><a name="showQuoteTableHk,Nf,seq[int]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showQuoteTableHk</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">apfData</span><span class="Other">:</span> <span class="Identifier">Nf</span><span class="Other">;</span> <span class="Identifier">stockseq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dt id="hkPfseq"><a name="hkPfseq,Nf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hkPfseq</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">anf</span><span class="Other">:</span> <span class="Identifier">Nf</span><span class="Other">;</span> <span class="Identifier">hkexcodes</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span></pre></dt>
+<dd>
+<p>hkPfseq</p>
+<p>hkPfseq returns the index seq of stocks in a Nf objects dx Stocks </p>
+
+
+</dd>
+<dt id="showQuoteTableHk"><a name="showQuoteTableHk,Nf"></a><pre><span class="Keyword">proc</span> <span class="Identifier">showQuoteTableHk</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">apfData</span><span class="Other">:</span> <span class="Identifier">Nf</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>showQuoteTable</p>
 <p>a table with kurtosis, stdDev close ,ema22 , company name and latest quote from yahoo</p>
@@ -1308,7 +1327,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-10 14:42:52 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-10 21:12:40 UTC</small>
       </div>
     </div>
   </div>
