--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1384,8 +1384,9 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>Compiler    : nim 0.11.3</p>
 <p>Description : A basic library for financial calculations with Nim</p>
 <blockquote><p><p>Yahoo historical stock data</p>
-<p>Yahoo current quotes and forex rates</p>
-<p>Dataframe like structure for easy working with dataseries</p>
+<p>Yahoo current stock quotes</p>
+<p>Tahoo forex rates</p>
+<p>Dataframe like structure for easy working with historical data and dataseries</p>
 <p>Returns calculations</p>
 <p>Ema calculation</p>
 <p>Date manipulations</p>
@@ -1397,7 +1398,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>ToDo        : Ratios , Covariance , Correlation</p>
 <p>Programming : qqTop</p>
 <p>Contributors: reactorMonk</p>
-<p>Requires    : random module available on nimble</p>
+<p>Requires    : statistics.nim and random module available on nimble</p>
 <p>Notes       : it is assumed that terminal color is black background</p>
 <blockquote><p><p>and white text. Other color schemes may not show all output.</p>
 <p>For comprehensive tests and usage see nimFinT5.nim</p>
@@ -1949,7 +1950,8 @@ head means oldest rows
 <dd>
 <p>rainbow</p>
 <p>random multi colored string</p>
-<pre><span class="Identifier">rainbow</span><span class="Punctuation">(</span><span class="StringLit">&quot;Sparkling string display !&quot;</span><span class="Punctuation">)</span></pre>
+<pre><span class="Identifier">rainbow</span><span class="Punctuation">(</span><span class="StringLit">&quot;Sparkling string display !&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="handler"><a name="handler,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">handler</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span> <span class="Other">{.</span><span class="Identifier">noconv</span><span class="Other">.}</span></pre></dt>
@@ -2082,7 +2084,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-10 21:12:40 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-11 23:00:09 UTC</small>
       </div>
     </div>
   </div>
