--- a/libFinHk.html
+++ b/libFinHk.html
@@ -1288,7 +1288,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>getHKEXseq</p>
 <p>this is used to get an index into the hkex.csv data</p>
 <p>for a single stockcode</p>
-<pre><span class="Identifier">hkexcodes</span> <span class="Operator">=</span> <span class="Identifier">initHKEX</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
+<pre class = "listing"><span class="Identifier">hkexcodes</span> <span class="Operator">=</span> <span class="Identifier">initHKEX</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Keyword">var</span> <span class="Identifier">bigMseq</span> <span class="Operator">=</span> <span class="Identifier">newSeq</span><span class="Punctuation">[</span><span class="Identifier">int</span><span class="Punctuation">]</span><span class="Punctuation">(</span><span class="Punctuation">)</span>
 <span class="Identifier">bigMseq</span><span class="Operator">.</span><span class="Identifier">add</span><span class="Punctuation">(</span><span class="Identifier">getHKEXseq</span><span class="Punctuation">(</span><span class="Identifier">hkexcodes</span><span class="Punctuation">[</span><span class="DecNumber">0</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="StringLit">&quot;00880&quot;</span><span class="Punctuation">)</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span> <span class="Identifier">bigMseq</span></pre><p>here hkexcodes[0] holds the list of stockcodes in HKEX format this is used to query the hkexcodes for company name and boardlots </p>
@@ -1331,7 +1331,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-13 17:37:46 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-14 16:09:42 UTC</small>
       </div>
     </div>
   </div>
