--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1259,14 +1259,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="month*(aDate: string): string"><wbr />month</a></li>
   <li><a class="reference" href="#year,string"
     title="year*(aDate: string): string"><wbr />year</a></li>
-  <li><a class="reference" href="#validDate,string"
-    title="validDate*(adate: string): bool"><wbr />valid<wbr />Date</a></li>
-  <li><a class="reference" href="#compareDates,string,string"
-    title="compareDates*(startDate, endDate: string): int"><wbr />compare<wbr />Dates</a></li>
-  <li><a class="reference" href="#plusDays,string,int"
-    title="plusDays*(aDate: string; days: int): string"><wbr />plus<wbr />Days</a></li>
-  <li><a class="reference" href="#minusDays,string,int"
-    title="minusDays*(aDate: string; days: int): string"><wbr />minus<wbr />Days</a></li>
+  <li><a class="reference" href="#validdate,string"
+    title="validdate*(adate: string): bool"><wbr />validdate</a></li>
   <li><a class="reference" href="#intervalsecs,string,string"
     title="intervalsecs*(startDate, endDate: string): float"><wbr />intervalsecs</a></li>
   <li><a class="reference" href="#intervalmins,string,string"
@@ -1281,8 +1275,14 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="intervalmonths*(startDate, endDate: string): float"><wbr />intervalmonths</a></li>
   <li><a class="reference" href="#intervalyears,string,string"
     title="intervalyears*(startDate, endDate: string): float"><wbr />intervalyears</a></li>
-  <li><a class="reference" href="#sleepy,float"
-    title="sleepy*(s: float)"><wbr />sleepy</a></li>
+  <li><a class="reference" href="#compareDates,string,string"
+    title="compareDates*(startDate, endDate: string): int"><wbr />compare<wbr />Dates</a></li>
+  <li><a class="reference" href="#sleepy,T"
+    title="sleepy*[T: float | int](s: T)"><wbr />sleepy</a></li>
+  <li><a class="reference" href="#plusDays,string,int"
+    title="plusDays*(aDate: string; days: int): string"><wbr />plus<wbr />Days</a></li>
+  <li><a class="reference" href="#minusDays,string,int"
+    title="minusDays*(aDate: string; days: int): string"><wbr />minus<wbr />Days</a></li>
   <li><a class="reference" href="#getSymbol2,string,string,string"
     title="getSymbol2*(symb, startDate, endDate: string): Df"><wbr />get<wbr />Symbol2</a></li>
   <li><a class="reference" href="#showHistData,Df,int"
@@ -1673,49 +1673,14 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 
 
 </dd>
-<dt id="validDate"><a name="validDate,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">validDate</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
+<dt id="validdate"><a name="validdate,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">validdate</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">adate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span></pre></dt>
 <dd>
-<p>validDate</p>
-<p>ensure that a date is in form yyyy-MM-dd (eg. 2015-03-20) and</p>
-<p>contains correct entries for year,month,day incl. leapyears</p>
-<p>date range allowed 1900-01-01  to  3000-12-31 </p>
-
-
-</dd>
-<dt id="compareDates"><a name="compareDates,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">compareDates</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
-<dd>
-<p>compareDates</p>
-<p>compare two dates of format yyyy-MM-dd</p>
-<p>results returned:</p>
-<p>startDate == endDate   ==&gt; 0</p>
-<p>startDate &gt;= endDate   ==&gt; 1</p>
-<p>startDate &lt;= endDate   ==&gt; 2</p>
-<p>undefined , invalid startDate ==&gt; -1</p>
-<p>undefined . invalid endDate and/or startDate  ==&gt; -2 </p>
-
-
-</dd>
-<dt id="plusDays"><a name="plusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">plusDays</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-<p>plusDays</p>
-<p>adds days to date string of format yyyy-MM-dd  or result of getDateStr()</p>
-<p>and returns a string of format yyyy-MM-dd</p>
-<p>the passed in date string must be a valid date or an error message will be returned </p>
-
-
-</dd>
-<dt id="minusDays"><a name="minusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">minusDays</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-<p>minusDays</p>
-<p>subtracts days from a date string of format yyyy-MM-dd  or result of getDateStr()</p>
-<p>and returns a string of format yyyy-MM-dd</p>
-<p>the passed in date string must be a valid date or an error message will be returned </p>
 
 
 </dd>
 <dt id="intervalsecs"><a name="intervalsecs,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">intervalsecs</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
 <dd>
-interval procs returns time elapsed between two dates in secs,hours etc. 
+interval procs returns time elapsed between two dates in secs,hours etc.
 
 </dd>
 <dt id="intervalmins"><a name="intervalmins,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">intervalmins</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
@@ -1748,12 +1713,31 @@ interval procs returns time elapsed between two dates in secs,hours etc.
 
 
 </dd>
-<dt id="sleepy"><a name="sleepy,float"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span></pre></dt>
+<dt id="compareDates"><a name="compareDates,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">compareDates</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
-<p>sleepy</p>
-<p>a sleep function to delay execution</p>
-<p>usefull if fetching hundreds of stock codes or quotes from yahoo</p>
-<p>in a loop in order not to hit the servers too hard. </p>
+
+
+</dd>
+<dt id="sleepy"><a name="sleepy,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sleepy</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="plusDays"><a name="plusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">plusDays</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>plusDays</p>
+<p>adds days to date string of format yyyy-MM-dd  or result of getDateStr()</p>
+<p>and returns a string of format yyyy-MM-dd</p>
+<p>the passed in date string must be a valid date or an error message will be returned </p>
+
+
+</dd>
+<dt id="minusDays"><a name="minusDays,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">minusDays</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>minusDays</p>
+<p>subtracts days from a date string of format yyyy-MM-dd  or result of getDateStr()</p>
+<p>and returns a string of format yyyy-MM-dd</p>
+<p>the passed in date string must be a valid date or an error message will be returned </p>
 
 
 </dd>
@@ -2107,7 +2091,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-14 16:13:17 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-14 20:52:42 UTC</small>
       </div>
     </div>
   </div>
